--- a/experiment/experiments.ipynb
+++ b/experiment/experiments.ipynb
@@ -71,11 +71,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "55591be7",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: feateng in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (0.2.0)Note: you may need to restart the kernel to use updated packages.\n",
+      "\n",
+      "Requirement already satisfied: numpy in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from feateng) (2.1.1)\n",
+      "Requirement already satisfied: pandas in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from feateng) (2.2.3)\n",
+      "Requirement already satisfied: scikit-learn in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from feateng) (1.6.1)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\sanch\\appdata\\roaming\\python\\python312\\site-packages (from pandas->feateng) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from pandas->feateng) (2025.1)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from pandas->feateng) (2025.1)\n",
+      "Requirement already satisfied: scipy>=1.6.0 in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from scikit-learn->feateng) (1.15.1)\n",
+      "Requirement already satisfied: joblib>=1.2.0 in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from scikit-learn->feateng) (1.4.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in c:\\users\\sanch\\anaconda3\\envs\\vehicle\\lib\\site-packages (from scikit-learn->feateng) (3.5.0)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\sanch\\appdata\\roaming\\python\\python312\\site-packages (from python-dateutil>=2.8.2->pandas->feateng) (1.16.0)\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install feateng"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "03c2210c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: feateng\n",
+      "Version: 0.2.0\n",
+      "Summary: A feature engineering helper library\n",
+      "Home-page: https://github.com/Sanchitgg/Data_Mat\n",
+      "Author: Sanchitgg\n",
+      "Author-email: sanchitgg2005@gmail.com\n",
+      "License: MIT\n",
+      "Location: c:\\Users\\sanch\\anaconda3\\envs\\vehicle\\Lib\\site-packages\n",
+      "Requires: numpy, pandas, scikit-learn\n",
+      "Required-by: \n",
+      "Files:\n",
+      "  feateng-0.2.0.dist-info\\INSTALLER\n",
+      "  feateng-0.2.0.dist-info\\METADATA\n",
+      "  feateng-0.2.0.dist-info\\RECORD\n",
+      "  feateng-0.2.0.dist-info\\REQUESTED\n",
+      "  feateng-0.2.0.dist-info\\WHEEL\n",
+      "  feateng-0.2.0.dist-info\\licenses\\LICENSE\n",
+      "  feateng-0.2.0.dist-info\\top_level.txt\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip show  -f feateng"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da1b767f",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import fea"
+   ]
   }
  ],
  "metadata": {
